<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActMain"
    android:orientation="vertical"
    android:background="@color/bg_color" >
    
    <TextView
        android:id="@+id/lblGPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_gps"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/tvGPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_nd"
        android:gravity="left" />
    
    <TextView
        android:id="@+id/lblNet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_net"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="12dp" />
    
    <TextView
        android:id="@+id/tvNet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_nd"
        android:gravity="left" />
    
    <TextView
        android:id="@+id/lblPas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_pas"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="12dp" />
    
    <TextView
        android:id="@+id/tvPas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_nd"
        android:gravity="left" />
    
    <TextView
        android:id="@+id/lblAdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_adr"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="12dp" />
    
    <TextView
        android:id="@+id/tvAdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_nd"
        android:gravity="left"/>    

</LinearLayout>
